# bd-v1

./: .gitignore  ROADMAP.md  docker-compose.dev.yml  requirements.txt  scope.md
src/: .env.example  Dockerfile  alembic.ini  pyproject.toml  requirements.txt
src/alembic/: alembic.ini  env.py
src/alembic/versions/: .gitkeep  65e1286bfeaf_initial_schema.py  856309d0de69_seed_platform_config.py
src/app/: __init__.py  config.py  dependencies.py  main.py
src/app/admin/: views.py
src/app/db/: __init__.py  base.py  mongo.py  postgres.py
src/app/middleware/: __init__.py  auth.py  logging.py
src/app/models/: __init__.py  booking.py  driver.py  driver_document.py  platform_config.py  ride.py  user.py  wallet.py  wallet_transaction.py
src/app/routers/: __init__.py  auth.py  bookings.py  chat.py  drivers.py  fare.py  rides.py  users.py  wallet.py
src/app/schemas/: __init__.py  auth.py  booking.py  chat.py  common.py  driver.py  fare.py  ride.py  user.py  wallet.py
src/app/scripts/: seed_toll_plazas.py
src/app/services/: __init__.py  auth_service.py  booking_service.py  chat_service.py  driver_service.py  fare_engine.py  notification_service.py  osrm_service.py  ride_service.py  storage_service.py  user_service.py  wallet_service.py
src/app/utils/: __init__.py  constants.py  exceptions.py  helpers.py
src/tests/: __init__.py  conftest.py  test_auth.py  test_bookings.py  test_chat.py  test_drivers.py  test_fare.py  test_rides.py  test_users.py  test_wallet.py
system-design/: 00-architecture.md  01-auth.md  02-user-driver.md  03-rides.md  04-bookings.md  (+8 more)
